--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,7 +1,7 @@
 
 
 /* google font */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* ROOT DECLARATION */
 :root {
@@ -17,7 +17,7 @@
     --rk-primary-variant: rgba(252, 225, 217, 1);
     --rk-primary-light: rgba(254, 247, 245, 1);
     --rk-border-color: #e5e7eb;
-    --rk-fontManrope: "Manrope", sans-serif;
+    --rk-fontInter: "Inter", sans-serif;
 }
 
 
@@ -32,7 +32,7 @@
 body {
     scrollbar-width: none;
     scroll-snap-type: both mandatory;
-    font-family: var(--rk-fontManrope);
+    font-family: var(--rk-fontInter);
     background-color: var(--rk-background-color)
 }
 
